src/test/deca/syntax/invalid/created/twoMains.deca
//

// Programme qui teste qu'on ne puisse pas avoir 2 mains

{

}

{

}
